--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
       <!--Герой-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Эффективные решениие <pre></pre> для вашего бизнеса</h1>
+          <h1 class="hero-title">Эффективные решениие для вашего бизнеса</h1>
           <button type="button" class="hero-button">Заказать услугу</button>
         </div>
       </section>
       <!--Особенность-->
-      <section class="section">
+      <section class="section section-features">
         <div class="container">
           <ul class="features">
             <li class="item">
@@ -179,7 +179,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
